--- a/config/west.yml
+++ b/config/west.yml
@@ -2,8 +2,8 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: joelspadin
-      url-base: https://github.com/joelspadin
+    # - name: joelspadin
+    #   url-base: https://github.com/joelspadin
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
@@ -11,8 +11,8 @@ manifest:
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: zmk-locales
-      remote: joelspadin
-      revision: main
+    # - name: zmk-locales
+    #   remote: joelspadin
+    #   revision: main
   self:
     path: config
