add rgbled module

--- a/boards/arm/corne_choc_pro/corne_choc_pro_left_defconfig
+++ b/boards/arm/corne_choc_pro/corne_choc_pro_left_defconfig
@@ -42,6 +42,9 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=20
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=48
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=96
 
+# Enable RGBLED 
+CONFIG_RGBLED_WIDGET=y
+
 # Windows Battery Reporting Fix
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
