--- a/boards/arm/corne_choc_pro/corne_choc_pro_right.dts
+++ b/boards/arm/corne_choc_pro/corne_choc_pro_right.dts
@@ -11,12 +11,30 @@
 	model = "corne_choc_pro_right";
 	compatible = "corne_choc_pro_right";
 
-
-
 	chosen {
 		zmk,battery = &fuelgauge;
         zmk,underglow = &led_strip;
 	};
+
+    aliases {
+        led-red = &led0;
+        led-green = &led1;
+        led-blue = &led2;
+    };
+    
+    leds {
+        compatible = "gpio-leds";
+        status = "okay";
+        led0: led_0 {
+            gpios = <&gpio0 43 GPIO_ACTIVE_LOW>;  // red LED, connected to P0.26
+        };
+        led1: led_1 {
+            gpios = <&gpio0 43 GPIO_ACTIVE_LOW>;  // green LED, connected to P0.30
+        };
+        led2: led_2 {
+            gpios = <&gpio0 43 GPIO_ACTIVE_LOW>;  // blue LED, connected to P0.06
+        };
+    };
 
 	kscan0: kscan {
 		compatible = "zmk,kscan-gpio-matrix";
